# django-delete-preview

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  README.pt-br.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  contributors.yml  release.yml
example/: manage.py  settings.py  urls.py  wsgi.py
example/bookstore/: admin.py  apps.py  models.py
example/bookstore/fixtures/: initial_data.json
example/bookstore/migrations/: 0001_initial.py
src/django_delete_preview/: __init__.py  apps.py  collector.py  formatters.py  managers.py  mixins.py  querysets.py  settings.py
src/django_delete_preview/management/commands/: preview_delete.py
tests/: conftest.py  models.py  settings.py  test_collector.py  test_formatters.py  test_management_command.py  test_mixins.py  test_querysets.py
